fix(a11y): Focus outline visible for future stock accordion * fix grid arrangement on PDP to keep future stock accordion above the add to cart button

--- a/feature-libs/product/future-stock/styles/_future-stock-accordion.scss
+++ b/feature-libs/product/future-stock/styles/_future-stock-accordion.scss
@@ -21,6 +21,15 @@ cx-future-stock-accordion {
     cx-icon {
       padding-inline-start: 0.375rem;
     }
+
+    @include forFeature('a11yVisibleFocusOverflows') {
+      margin-inline-start: 1.25rem;
+      padding-inline-start: 0;
+
+      @include media-breakpoint-down(md) {
+        margin-inline-start: 0;
+      }
+    }
   }
 
   .cx-future-stock-accordion-content {
